k8s/pacs/kompose/kompose-internal-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: kompose-internal
  namespace: deepmd-pacs
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/kompose-internal: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kompose-internal: "true"
