k8s/pacs/kompose/web-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: deepmd-pacs
  creationTimestamp: null
  name: web
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/web: "true"
  podSelector:
    matchLabels:
      io.kompose.network/web: "true"
